0.04
 - Remove Tickit dependency, there are no widgets now.

0.03 2015-08-25T00:19:59+02:00
 - Add Tickit::Widget::Scroller 0.19 version.
 - Improve SEE ALSO section in doc.
 - Update Module::Install to 1.16 version.
 - Update Tickit to 0.53 version.
 - Update Tickit::Widget::FloatBox to 0.03 version.
 - Update Tickit::Widget::ScrollBox to 0.06 version.
 - Update Tickit::Widget::SparkLine to 0.105 version.
 - Update Tickit::Widget::Tabbed to 0.19 version.
 - Update Tickit::Widgets to 0.20 version.

0.02 2015-04-20T12:34:07+02:00
 - Add Tickit::Widget::Figlet 0.003 version.
 - Add Tickit::Widget::Term 0.002 version.
 - Update Module::Install to 1.15 version.
 - Update Tickit::Widget::Tabbed to 0.18 version.

0.01 2015-02-12T19:29:24+01:00
 - First version