@@ -1,4 +1,5 @@
 0.04
+ - Move author tests to xt/ directory.
  - Remove Tickit dependency, there are no widgets now.
 
 0.03 2015-08-25T00:19:59+02:00
